# scpspt

./: .gitignore  CMakeLists.txt  README.md
src/: TerminalWidget.cpp  TerminalWidget.h  resources.qrc  scpspt.cpp  scpspt.ui
